SchoolIdolFestival/beta.css
/* ... */
/* textbox change color on hover */
.titlebox .md ul li:nth-child(1):not(.flairsample-left):hover {
    color: black;
    background-color: #C9D6E2;
}

/* appears on hover */
.titlebox ul:hover > li {
    display: block;
}



/*Editing Flair Box to say Represent your idol*/

.side .titlebox .flairtoggle {
margin-top: 5px;
padding-top: 3px;
padding-bottom: 3px;
padding-left: 9px;
font-family: "Lucida Sans Unicode","Lucida Grande",sans-serif;
color: white;
font-size: 0px;
background-color: rgb(51,102,153);
}

.side .titlebox .tagline {
border-color: rgb(51,102,153);
border-width: 1px;
border-style: solid;
border-top-style: none;
padding-top: 6px;
padding-left: 10px;
padding-bottom: 6px;
margin: 0;
margin-bottom: 5px;
}

.side .titlebox .flairtoggle::after {
visibility: visible;
font-size: 11px!important;
content: "Want to represent your idol? Set it below here:";
cursor: default;
vertical-align: bottom;
}


/*Footer*/

.footer-parent {
height: 0px;
padding-top: 165px;
padding-bottom: 0px;
clear: both;
background-image: url(%%lovelive%%);
text-align: center;
width: 100%;
background-position: center;
background-repeat: no-repeat;
margin-bottom: -1px;
}

/*Announcement bar*/

div.content {
margin-top:165px;
}
.titlebox form {

position: static }
.side h3:nth-of-type(1) {

/*this code positions the sticky*/

position:absolute;
display: block;
top:285px;
left:40px;
font-size:14px!important;

/*this code styles the sticky*/


color: #555555;
text-align: left;
margin: 15px 15px 0px 15px;
border-radius: 8px;
width: 60%;
padding: 10px 0px 15px 59px;
background-image:url(%%rinalert%%);
background-repeat: no-repeat;
display:inline-block;
}

/*FLAIR BOX MODIFICATION*/

.flairselector.drop-choices.active {
    margin-top: -58px;
    margin-left: 0px;
    }
.side .titlebox .flairoptionpane {
    max-height: 500px;
    }
.side .titlebox .flairselector.drop-choices.active {
    margin-top: -150px;
    z-index: 10000000000; /*over "use subreddit style"*/
    }

.flairoptionpane a.author,
.flairselection a.author {
    background: transparent;
    color: black;
    padding-left: 4px;
    vertical-align: middle;
    }
.flairselection a.author {
    visibility: hidden;
    font-size: 0px !important;
    }
.flairselection a.author:hover {
    text-decoration: none;
    }

.flairselection a.author::after {
    visibility: visible;
    font-size: 10px !important;
    content: 'Best Idol: ';
    vertical-align: middle;
    padding-right: 10px;
    cursor: default;
    }

.flairsample-left {
    text-align: center !important;
}

/*FLAIR*/

.flair {
    border: none !important;
    text-indent: -9999px;
    overflow: hidden;
    padding: 0px;
    background: url(%%flairs%%) no-repeat -9999px -9999px;
    display:inline-block;
    
    /* default sizes */
    width: 40px;
    height: 40px;
}

/*.flair:hover {
    padding-top: 10px;
    padding-bottom: 18px;
    background: url(%%idol%%) no-repeat -9999px -9999px;
    text-indent: 0px;
    margin-right: 5px;
    width: auto !important;
    height: auto !important;
    }*/

 .link .flair, .entry .tagline .flair {
float:left;
}

/*FLAIR ICON*/

.flair-Aeli{ background-position: 0 0; } 
.flair-Ahanayo{ background-position: 0 -40px; } 
.flair-Ahonoka{ background-position: 0 -80px; } 
.flair-Akanata{ background-position: 0 -120px; } 
.flair-Akotori{ background-position: 0 -160px; } 
.flair-Amaki{ background-position: 0 -200px; } 
.flair-Anico{ background-position: 0 -240px; } 
.flair-Anozomi{ background-position: 0 -280px; } 
.flair-Arin{ background-position: 0 -320px; } 
.flair-Aumi{ background-position: 0 -360px; } 
.flair-Beli{ background-position: 0 -400px; } 
.flair-Bhanayo{ background-position: 0 -440px; } 
.flair-Bhonoka{ background-position: 0 -480px; } 
.flair-Bkotori{ background-position: 0 -520px; } 
.flair-Bmaki{ background-position: 0 -560px; } 
.flair-Bnico{ background-position: 0 -600px; } 
.flair-Bnozomi{ background-position: 0 -640px; } 
.flair-Brin{ background-position: 0 -680px; } 
.flair-Bumi{ background-position: 0 -720px; } 
.flair-Celi{ background-position: 0 -760px; } 
.flair-Chanayo{ background-position: 0 -800px; } 
.flair-Chonoka{ background-position: 0 -840px; } 
.flair-Ckotori{ background-position: 0 -880px; } 
.flair-Cmaki{ background-position: 0 -920px; } 
.flair-Cnico{ background-position: 0 -960px; } 
.flair-Cnozomi{ background-position: 0 -1000px; } 
.flair-Crin{ background-position: 0 -1040px; } 
.flair-Cumi{ background-position: 0 -1080px; } 
.flair-Weli{ background-position: 0 -1120px; } 
.flair-Whanayo{ background-position: 0 -1160px; } 
.flair-Whonoka{ background-position: 0 -1200px; } 
.flair-Wkotori{ background-position: 0 -1240px; } 
.flair-Wmaki{ background-position: 0 -1280px; } 
.flair-Wnico{ background-position: 0 -1320px; } 
.flair-Wnozomi{ background-position: 0 -1360px; } 
.flair-Wrin{ background-position: 0 -1400px; } 
.flair-Wumi{ background-position: 0 -1440px; } 
.flair-Yeli{ background-position: 0 -1480px; } 
.flair-Yhanayo{ background-position: 0 -1520px; } 
.flair-Yhonoka{ background-position: 0 -1560px; } 
.flair-Ykotori{ background-position: 0 -1600px; } 
.flair-Ymaki{ background-position: 0 -1640px; } 
.flair-Ynico{ background-position: 0 -1680px; } 
.flair-Ynozomi{ background-position: 0 -1720px; } 
.flair-Yrin{ background-position: 0 -1760px; } 
.flair-Yumi{ background-position: 0 -1800px; } 
.flair-alpaca{ background-position: 0 -1840px; } 
.flair-eliw{ background-position: 0 -1880px; } 
.flair-eliw2{ background-position: 0 -1920px; } 
.flair-eri{ background-position: 0 -1960px; } 
.flair-first{ background-position: -40px 0; width: 44px; height: 44px; } 
.flair-hanayo{ background-position: -40px -44px; } 
.flair-hanayow{ background-position: -40px -84px; } 
.flair-hanayow2{ background-position: -40px -124px; } 
.flair-honoka{ background-position: -40px -164px; } 
.flair-honokaw{ background-position: -40px -204px; } 
.flair-honokaw2{ background-position: -40px -244px; } 
/* ... */

